[fix] overflow для всех текстовых блоков

--- a/blocks/edit-form/__header/edit-form__header.css
+++ b/blocks/edit-form/__header/edit-form__header.css
@@ -6,6 +6,9 @@
     color: black;
     padding: 0 0 24px;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
