--- a/blocks/edit-form/__save-button/edit-form__save-button.css
+++ b/blocks/edit-form/__save-button/edit-form__save-button.css
@@ -13,6 +13,9 @@
     cursor: pointer;
     transition: opacity 0.3s linear;
     border: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .edit-form__save-button:hover {
